# cmkl-sec-302-assignment-1

./: README.md  mnist_lint_hair_trigger_detector.keras  pyproject.toml  task_a.ipynb  task_b.ipynb
