[project]
name = "cmkl-sec-302-assignment-1"
version = "0.1.0"
description = "CMKL SEC-302 Assignment 1"
readme = "README.md"
requires-python = "==3.11.*"
dependencies = [
    "adversarial-robustness-toolbox>=1.20.1",
    "matplotlib>=3.10.7",
    "notebook>=7.4.7",
    "numpy>=2.3.4",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "simplejson>=3.20.2",
    "tensorflow>=2.20.0",
    "torch>=2.9.0",
]
